renamed:    FilesFoldersAIO.conf.in -> files-folders-aio.conf.in 	renamed:    FilesFoldersAIO.sh -> files-folders-aio.sh 	renamed:    FilesFoldersCpPIDCreate.conf.in -> files-folders-cp-pid-create.conf.in 	renamed:    FilesFoldersCpPIDCreate.sh -> files-folders-cp-pid-create.sh 	renamed:    FilesFoldersCpPIDRm.conf.in -> files-folders-cp-pid-rm.conf.in 	renamed:    FilesFoldersCpPIDRm.sh.bak -> files-folders-cp-pid-rm.sh 	renamed:    FilesFoldersCp.conf.in -> files-folders-cp.conf.in 	renamed:    FilesFoldersCp.sh -> files-folders-cp.sh 	renamed:    FilesFoldersRename.conf.in -> files-folders-rename.conf.in 	renamed:    FilesFoldersRename.sh -> files-folders-rename.sh 	renamed:    FilesFoldersRm.conf.in -> files-folders-rm.conf.in 	renamed:    FilesFoldersRm.sh -> files-folders-rm.sh 	renamed:    FoldersMv.conf.in -> folders-mv.conf.in 	renamed:    FoldersMv.sh -> folders-mv.sh 	new file:   old/FolderMv.conf.in 	new file:   old/FolderMv.sh 	new file:   old/copy-and-rename0.sh 	new file:   old/copy-and-rename1copy-files-2-target.sh 	new file:   old/copy-and-rename2rename-mysqldump.sh

--- a/files-folders-cp.conf.in
+++ b/files-folders-cp.conf.in
@@ -9,7 +9,7 @@
 ## Parameter  5: Copy Mode Switch   0=Copy only files
 ##                                  1=Copy files and folders
 ##                                  2=Copy only folders
-## Parameter  6: Script path i.e.   "/root/bin/linux/shell/FilesFoldersActions/"
+## Parameter  6: Script path i.e.   "/root/bin/linux/shell/files-folders-actions/"
 ## Parameter  7: Script sub i.e.    "FilesFoldersCpPIDCreate.sh"
 ## Parameter  8: Sys log i.e.       "/var/log/$file_name.log"
 ## Parameter  9: Job log i.e.       "/tmp/$file_name.log"
@@ -24,9 +24,9 @@ FOLDER_TARGET="/tmp/"
 NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP_SEARCH=1
-SCRIPT_PATH="/root/bin/linux/shell/FilesFoldersActions/"
-SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersCpPIDCreate.sh"
-SCRIPT_SUB_FILE_PID_RM="FilesFoldersCpPIDRm.sh"
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
+SCRIPT_SUB_FILE_PID_CREATE="files-folders-cp-pid-create.sh"
+SCRIPT_SUB_FILE_PID_RM="files-folders-cp-pid-rm.sh"
 SYS_LOG="/var/log/bash/$file_name.log"
 JOB_LOG="/tmp/bash/$file_name.log"
 OUTPUT_SWITCH=0
