--- a/files-folders-rename.conf.in
+++ b/files-folders-rename.conf.in
@@ -40,9 +40,9 @@ NAME_PART_NEW="$(date +%y%m%d%H%S)"
 FOLDER_TARGET="/home/.backup/mysql/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
-RECREATE_FOLDER_SWITCH=0
-SCRIPT_PATH="/root/bin/linux/shell/FilesFoldersActions/"
-SCRIPT_SUB_FILE_FOLDERSMV="FoldersMv.sh"
+RECREATE_FOLDER_SWITCH=1
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
+SCRIPT_SUB_FILE_FOLDERS_MV="folders-mv.sh"
 SYS_LOG="/var/log/bash/$file_name.log"
 JOB_LOG="/tmp/bash/$file_name.log"
 OUTPUT_SWITCH=0
