--- a/files-folders-rename.conf.in
+++ b/files-folders-rename.conf.in
@@ -2,24 +2,21 @@
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
-## Parameter  1: Folder Target i.e.    "/tmp/"
-## Parameter  2: Name Part Old i.e.    "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
-## Parameter  3: Name Part New i.e.    "$(date +%y%m%d%H%M%S)"
-## Parameter  4: Script Path...Where the scripts are stored i.e. "/root/bin/"
-## Parameter  5: Rename Mode Switch 0=Rename only files
-##                                  1=Rename Files and Folders
-##                                  2=Rename only Folders
-## Parameter  6: Rename Folder Deep Search "--rename-fd=1"=Set the folder deep where File(s) and Folder(s) get renamed
-## Parameter  7: Recreate Folder Switch 0=Off
-##                                      1=On
-## Parameter  8: Output Switch      0=Console
-##                                  1=Logfile
-##                                  1=Default
-## Parameter  9: Verbose Switch     0=Off
-##                                  1=On
-##                                  1=Default
-
-
+## Parameter 1: File Name Part Old i.e. "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
+## Parameter 2: File Name Part New i.e. "$(date +%y%m%d%H%M%S)"
+## Parameter 3: Folder Target i.e.		"/home/backup/mysql/"
+## Parameter 4: Rename Mode Switch		0=Only files
+##                             			1=Files and Folders
+##                             			2=Only Folders
+## Parameter 5: Rename Folder Deep "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to rename. MAX VALUE IS 2 for security reason
+## Parameter 6: Recreate Folder Switch	0=Off
+##                                     	1=On
+## Parameter 7: Sys log i.e. 			"/var/log/bash/$file_name.log"
+## Parameter 8: Job log i.e. 			"/tmp/bash/$file_name.log"
+## Parameter 9: Output Switch      		0=Console
+##                                  	1=Logfile; Default
+## Parameter 10: Verbose Switch     	0=Off
+##                                  	1=On; Default
 
 ## Parameter 1: File Name Part Old i.e. "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
 ## Parameter 2: File Name Part New i.e. "$(date +%y%m%d%H%M%S)"
