--- a/files-folders-cp-pid-rm.conf.in
+++ b/files-folders-cp-pid-rm.conf.in
@@ -2,33 +2,14 @@
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
-## Parameter  1: Folder Source i.e.    "/home/backup/mysql/"
-## Parameter  2: Folder Target i.e.    "/tmp/"
-## Parameter  3: Name Part Old i.e.    "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
-## Parameter  4: Name Part New i.e.    "$(date +%y%m%d%H%M%S)"
-## Parameter  5: Name Part Delete i.e. "$(date +%y%m%d%*)"
-## Parameter  6: Script Path...Where the scripts are stored i.e. "/root/bin/"
-## Parameter  7: Rename Mode Switch 0=Rename only files
-##                                  1=Rename Files and Folders
-##                                  2=Rename only Folders
-## Parameter  8: Rename Folder Deep Search "--rename-fd=1"=Set the folder deep where File(s) and Folder(s) get renamed
-## Parameter  9: Copy Mode Switch   0=Copy only files
-##                                  1=Copy Files and Folders
-##                                  2=Copy only Folders
-## Parameter 10: Copy Folder Deep Search "--cp-fd=1"=Set the folder deep where File(s) and Folder(s) get copied
-## Parameter 11: Remove Mode Switch 0=Remove only files
-##                                  1=Remove Files and Folders
-##                                  2=Remove only Folders
-## Parameter 12: Remove Folder Deep Search 1=Set the folder deep where File(s) and Folder(s) get removed
-## Parameter 13: Recreate Folder Switch 0=Off
-##                                      1=On
-## Parameter 14: Output Switch      0=Console
-##                                  1=Logfile
-##                                  1=Default
-## Parameter 15: Verbose Switch     0=Off
-##                                  1=On
-##                                  1=Default
-
+## Parameter  1: PID Full Path i.e.     "/var/run/test.pid"
+## Parameter  2: PID i.e.               "54895"
+## Parameter  3: Sys log i.e.           "/var/log/bash/$file_name.log"
+## Parameter  4: Job log i.e.           "/tmp/bash/$file_name.log"
+## Parameter  5: Output Switch          0=Console
+##                                      1=Logfile; Default
+## Parameter  6: Verbose Switch         0=Off
+##                                      1=On; Default
 
 PID_PATH_FULL="/var/run/$file_name.pid"
 PID_PROCESS_ID=$$
