modified:   files-folders-aio.conf.in 	modified:   files-folders-cp-pid-create.conf.in 	modified:   files-folders-cp-pid-create.sh 	modified:   files-folders-cp-pid-rm.conf.in 	modified:   files-folders-cp-pid-rm.sh 	modified:   files-folders-cp.conf.in 	modified:   files-folders-cp.sh 	modified:   files-folders-rename.conf.in 	modified:   files-folders-rename.sh 	modified:   files-folders-rm.conf.in 	modified:   files-folders-rm.sh 	modified:   folders-mv.conf.in 	modified:   folders-mv.sh 	deleted:    output-styler copy

--- a/files-folders-cp-pid-create.conf.in
+++ b/files-folders-cp-pid-create.conf.in
@@ -17,8 +17,8 @@ PID_PATH_FULL="/var/run/$file_name.pid"
 PID=98765
 FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/"
-SYS_LOG="/var/log/bash/$file_name.log"
-JOB_LOG="/tmp/bash/$file_name.log"
+SYS_LOG="/tmp/bash/$file_name_sys.log"
+JOB_LOG="/tmp/bash/$file_name_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
