--- a/files-folders-rename.conf.in
+++ b/files-folders-rename.conf.in
@@ -40,7 +40,7 @@ FOLDER_DEEP=1
 RECREATE_FOLDER_SWITCH=1
 SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
 SCRIPT_SUB_FILE_FOLDERS_MV="folders-mv.sh"
-SYS_LOG="/tmp/bash/$file_name_sys.log"
-JOB_LOG="/tmp/bash/$file_name_job.log"
+SYS_LOG="/tmp/bash/${file_name}_sys.log"
+JOB_LOG="/tmp/bash/${file_name}_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
