--- a/folders-mv.conf.in
+++ b/folders-mv.conf.in
@@ -20,7 +20,7 @@ NAME_PART_OLD="current*"
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
 FOLDER_DEEP=1
 RECREATE_FOLDERS_SWITCH=1
-SYS_LOG="/tmp/bash/$file_name_sys.log"
-JOB_LOG="/tmp/bash/$file_name_job.log"
+SYS_LOG="/tmp/bash/${file_name}_sys.log"
+JOB_LOG="/tmp/bash/${file_name}_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
