--- a/files-folders-cp-pid-rm.conf.in
+++ b/files-folders-cp-pid-rm.conf.in
@@ -11,8 +11,8 @@
 ## Parameter  6: Verbose Switch         0=Off
 ##                                      1=On; Default
 
-PID_PATH_FULL="/var/run/$file_name.pid"
-PID_PROCESS_ID=$$
+PID_PATH_FULL="/tmp/bash/files-folders-cp.pid"
+PID=98765
 SYS_LOG="/tmp/bash/${file_name}_sys.log"
 JOB_LOG="/tmp/bash/${file_name}_job.log"
 OUTPUT_SWITCH=0
