--- a/files-folders-cp.conf.in
+++ b/files-folders-cp.conf.in
@@ -19,13 +19,13 @@
 ## Parameter 12: Verbose Switch     0=Off
 ##                                  1=On; Default
 
-PID_PATH_FULL="/var/run/$file_name.pid"
+PID_PATH_FULL="/tmp/bash/files-folders-cp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/"
 NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions.loc/"
 SCRIPT_SUB_FILE_PID_CREATE="files-folders-cp-pid-create.sh"
 SCRIPT_SUB_FILE_PID_RM="files-folders-cp-pid-rm.sh"
 SYS_LOG="/tmp/bash/${file_name}_sys.log"
