--- a/files-folders-rename.conf.in
+++ b/files-folders-rename.conf.in
@@ -2,34 +2,23 @@
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
-## Parameter 1: File Name Part Old i.e. "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
-## Parameter 2: File Name Part New i.e. "$(date +%y%m%d%H%M%S)"
-## Parameter 3: Folder Target i.e.		"/home/backup/mysql/"
-## Parameter 4: Rename Mode Switch		0=Only files
+## Parameter  1: File Name Part Old i.e. "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
+## Parameter  2: File Name Part New i.e. "$(date +%y%m%d%H%M%S)"
+## Parameter  3: Folder Target i.e.		"/home/backup/mysql/"
+## Parameter  4: Rename Mode Switch		0=Only files
 ##                             			1=Files and Folders
 ##                             			2=Only Folders
-## Parameter 5: Rename Folder Deep "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to rename. MAX VALUE IS 2 for security reason
-## Parameter 6: Recreate Folder Switch	0=Off
+## Parameter  5: Rename Folder Deep "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to rename. MAX VALUE IS 2 for security reason
+## Parameter  6: Recreate Folder Switch	0=Off
 ##                                     	1=On
-## Parameter 7: Sys log i.e. 			"/var/log/bash/$file_name.log"
-## Parameter 8: Job log i.e. 			"/tmp/bash/$file_name.log"
-## Parameter 9: Output Switch      		0=Console
+## Parameter  7: Sys log i.e. 			"/var/log/bash/$file_name.log"
+## Parameter  8: Job log i.e. 			"/tmp/bash/$file_name.log"
+## Parameter  9: Sys log i.e.		    "/var/log/bash/$file_name.log"
+## Parameter 10: Job log i.e.		    "/tmp/bash/$file_name.log"
+## Parameter 11: Output Switch      	0=Console
 ##                                  	1=Logfile; Default
-## Parameter 10: Verbose Switch     	0=Off
+## Parameter 12: Verbose Switch     	0=Off
 ##                                  	1=On; Default
-
-## Parameter 1: File Name Part Old i.e. "current*" ONLY wildcards at the beginning and at the end with other real content will work. ONLY wildcards with no other real content will NOT work
-## Parameter 2: File Name Part New i.e. "$(date +%y%m%d%H%M%S)"
-## Parameter 3: Folder Source i.e. "/home/backup/mysql/"
-## Parameter 4: Mode Rename Switch "--rename-files-folders"=File(s) and Folder(s) will be renamed
-##				"--rename-folders"=ONLY Folder(s) will be renamed
-##              else i.e. "--rename-files"=ONLY File(s) will not be renamed
-## Parameter 5: Rename Folder Deep Search "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to rename. MAX VALUE IS 2 for security reason
-## Parameter 6: Recreate Folders Switch "--recreate-folders"=On...Folders will be recreated too
-##              else=Off...Folders will not be recreated
-## Parameter 7: Output Switch "--logfile"=On...Output to logfile
-##              else=Off...Output to console
-## Parameter 8: Verbose Switch "-v"=On, else=Off
 
 
 NAME_PART_OLD="current*" 
@@ -38,7 +27,7 @@ FOLDER_TARGET="/home/.backup/mysql/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
 RECREATE_FOLDER_SWITCH=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions.loc/"
 SCRIPT_SUB_FILE_FOLDERS_MV="folders-mv.sh"
 SYS_LOG="/tmp/bash/${file_name}_sys.log"
 JOB_LOG="/tmp/bash/${file_name}_job.log"
