modified:   files-folders-cp.conf.in 	modified:   files-folders-rename.conf.in

--- a/files-folders-cp.conf.in
+++ b/files-folders-cp.conf.in
@@ -25,7 +25,7 @@ FOLDER_TARGET="/tmp/"
 NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions.loc/"
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
 SCRIPT_SUB_FILE_PID_CREATE="files-folders-cp-pid-create.sh"
 SCRIPT_SUB_FILE_PID_RM="files-folders-cp-pid-rm.sh"
 SYS_LOG="/tmp/bash/${file_name}_sys.log"
