--- a/files-folders-rename.conf.in
+++ b/files-folders-rename.conf.in
@@ -27,7 +27,7 @@ FOLDER_TARGET="/home/.backup/mysql/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
 RECREATE_FOLDER_SWITCH=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions.loc/"
+SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
 SCRIPT_SUB_FILE_FOLDERS_MV="folders-mv.sh"
 SYS_LOG="/tmp/bash/${file_name}_sys.log"
 JOB_LOG="/tmp/bash/${file_name}_job.log"
