renamed:    files-folders-aio.conf.in -> FilesFoldersActionsAIO.conf.in 	renamed:    files-folders-aio.sh -> FilesFoldersActionsAIO.sh 	new file:   FilesFoldersActionsAIO.txt 	new file:   FilesFoldersActionsCp txt 	renamed:    files-folders-cp.conf.in -> FilesFoldersActionsCp.conf.in 	renamed:    files-folders-cp.sh -> FilesFoldersActionsCp.sh 	renamed:    files-folders-cp-pid-create.conf.in -> FilesFoldersActionsCpPIDCreate.conf.in 	new file:   FilesFoldersActionsCpPIDCreate.sh 	new file:   FilesFoldersActionsCpPIDCreate.txt 	renamed:    files-folders-cp-pid-rm.conf.in -> FilesFoldersActionsCpPIDRm.conf.in 	renamed:    files-folders-cp-pid-rm.sh -> FilesFoldersActionsCpPIDRm.sh 	new file:   FilesFoldersActionsCpPIDRm.txt 	renamed:    files-folders-rename.conf.in -> FilesFoldersActionsRename.conf.in 	renamed:    files-folders-rename.sh -> FilesFoldersActionsRename.sh 	renamed:    files-folders-rm.conf.in -> FilesFoldersActionsRm.conf.in 	renamed:    files-folders-rm.sh -> FilesFoldersActionsRm.sh 	renamed:    output-styler -> OutputStyler 	deleted:    files-folders-cp-pid-create.sh 	deleted:    folders-mv.conf.in 	deleted:    folders-mv.sh

--- a/FilesFoldersActionsCpPIDRm.conf.in
+++ b/FilesFoldersActionsCpPIDRm.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersCpPIDRm.sh
+### THIS A CONFIG FILE FOR FilesFoldersActionsCpPIDRm.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -11,10 +11,10 @@
 ## Parameter  6: Verbose Switch         0=Off
 ##                                      1=On; Default
 
-PID_PATH_FULL="/tmp/bash/files-folders-cp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp.pid"
 PID=98765
-SYS_LOG="/tmp/bash/${file_name}_sys.log"
-JOB_LOG="/tmp/bash/${file_name}_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
