--- a/FilesFoldersActionsCp.conf.in
+++ b/FilesFoldersActionsCp.conf.in
@@ -9,7 +9,7 @@
 ## Parameter  5: Copy Mode Switch   0=Copy only files
 ##                                  1=Copy files and folders
 ##                                  2=Copy only folders
-## Parameter  6: Script path i.e.   "/root/bin/linux/shell/files-folders-actions/"
+## Parameter  6: Script path i.e.   "/root/bin/linux/shell/FilesFoldersActions/"
 ## Parameter  7: Sub Script for creating PID i.e. "folders-folders-pid-create.sh"
 ## Parameter  8: Sub Script for removing PID i.e. "folders-folders-pid-rm.sh"
 ## Parameter  9: Sys log i.e.		"/var/log/bash/$file_name.log"
@@ -19,17 +19,17 @@
 ## Parameter 12: Verbose Switch     0=Off
 ##                                  1=On; Default
 
-PID_PATH_FULL="/tmp/bash/files-folders-cp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersCp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/"
-FOLDER_TARGET="/tmp/"
+FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
-SCRIPT_SUB_FILE_PID_CREATE="files-folders-cp-pid-create.sh"
-SCRIPT_SUB_FILE_PID_RM="files-folders-cp-pid-rm.sh"
-SYS_LOG="/tmp/bash/${file_name}_sys.log"
-JOB_LOG="/tmp/bash/${file_name}_job.log"
+SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
+SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersCpPIDCreate.sh"
+SCRIPT_SUB_FILE_PID_RM="FilesFoldersCpPIDRm.sh"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
