--- a/FilesFoldersActionsCpPIDCreate.conf.in
+++ b/FilesFoldersActionsCpPIDCreate.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersCpPIDCreate.sh
+### THIS A CONFIG FILE FOR FilesFoldersActionsCpPIDCreate.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -13,15 +13,11 @@
 ## Parameter  8: Verbose Switch         0=Off
 ##                                      1=On; Default
 
-PID_PATH_FULL="/tmp/bash/files-folders-cp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp.pid"
 PID=98765
-#FOLDER_SOURCE="/home/.backup/mysql/"
-#FOLDER_TARGET="/tmp/"
-FOLDER_TARGET="/home/.backup/mysql/"
-FOLDER_SOURCE="/tmp/"
-SYS_LOG="/tmp/bash/${file_name}_sys.log"
-JOB_LOG="/tmp/bash/${file_name}_job.log"
+FOLDER_SOURCE="/home/.backup/mysql/"
+FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
-
-
