--- a/FilesFoldersActionsRename.conf.in
+++ b/FilesFoldersActionsRename.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersRename.sh
+### THIS A CONFIG FILE FOR FilesFoldersActionsRename.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -20,16 +20,15 @@
 ## Parameter 12: Verbose Switch     	0=Off
 ##                                  	1=On; Default
 
-
 NAME_PART_OLD="current*" 
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
-FOLDER_TARGET="/home/.backup/mysql/"
+FOLDER_TARGET="/home/.backup/mysql/sub/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
 RECREATE_FOLDER_SWITCH=1
-SCRIPT_PATH="$HOME/bin/linux/shell/files-folders-actions/"
+SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
 SCRIPT_SUB_FILE_FOLDERS_MV="folders-mv.sh"
-SYS_LOG="/tmp/bash/${file_name}_sys.log"
-JOB_LOG="/tmp/bash/${file_name}_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsRename_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsRename_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
