renamed:    FilesFoldersActionsCp txt -> FilesFoldersActions.cp txt 	renamed:    FilesFoldersActionsCp.conf.in -> FilesFoldersActions.cp.conf.in 	renamed:    FilesFoldersActionsCpPIDCreate.conf.in -> FilesFoldersActions.cp.pid.create.conf.in 	renamed:    FilesFoldersActionsCpPIDCreate.sh -> FilesFoldersActions.cp.pid.create.sh 	renamed:    FilesFoldersActionsCpPIDCreate.txt -> FilesFoldersActions.cp.pid.create.txt 	renamed:    FilesFoldersActionsCpPIDRm.conf.in -> FilesFoldersActions.cp.pid.rm.conf.in 	renamed:    FilesFoldersActionsCpPIDRm.sh -> FilesFoldersActions.cp.pid.rm.sh 	renamed:    FilesFoldersActionsCpPIDRm.txt -> FilesFoldersActions.cp.pid.rm.txt 	renamed:    FilesFoldersActionsCp.sh -> FilesFoldersActions.cp.sh 	renamed:    FilesFoldersActionsAIO.conf.in -> FilesFoldersActions.main.conf.in 	renamed:    FilesFoldersActionsAIO.sh -> FilesFoldersActions.main.sh 	new file:   FilesFoldersActions.main.txt 	renamed:    FilesFoldersActionsRename.conf.in -> FilesFoldersActions.rename.conf.in 	renamed:    FilesFoldersActionsRename.sh -> FilesFoldersActions.rename.sh 	new file:   FilesFoldersActions.rename.txt 	renamed:    FilesFoldersActionsRm.conf.in -> FilesFoldersActions.rm.conf.in 	renamed:    FilesFoldersActionsRm.sh -> FilesFoldersActions.rm.sh 	new file:   FilesFoldersActions.rm.txt 	deleted:    FilesFoldersActionsAIO.txt

--- a/FilesFoldersActions.cp.conf.in
+++ b/FilesFoldersActions.cp.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersCp.sh
+### THIS A CONFIG FILE FOR FilesFoldersActions.cp.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -28,8 +28,8 @@ FOLDER_DEEP=1
 SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
 SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersCpPIDCreate.sh"
 SCRIPT_SUB_FILE_PID_RM="FilesFoldersCpPIDRm.sh"
-SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
-JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
