--- a/FilesFoldersActions.cp.pid.create.conf.in
+++ b/FilesFoldersActions.cp.pid.create.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersActionsCpPIDCreate.sh
+### THIS A CONFIG FILE FOR FilesFoldersActions.cp.pid.create.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -13,11 +13,11 @@
 ## Parameter  8: Verbose Switch         0=Off
 ##                                      1=On; Default
 
-PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 PID=98765
 FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
-SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
-JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
