--- a/FilesFoldersActions.cp.pid.rm.conf.in
+++ b/FilesFoldersActions.cp.pid.rm.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersActionsCpPIDRm.sh
+### THIS A CONFIG FILE FOR FilesFoldersActions.cp.pid.rm.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -11,10 +11,10 @@
 ## Parameter  6: Verbose Switch         0=Off
 ##                                      1=On; Default
 
-PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 PID=98765
-SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_sys.log"
-JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsCp_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
