--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -1,4 +1,4 @@
-### THIS A CONFIG FILE FOR FilesFoldersActionsAIO.sh
+### THIS A CONFIG FILE FOR FilesFoldersActions.main.sh
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
@@ -12,9 +12,9 @@
 ## Parameter  9: Mode Switch   0=Only files
 ##                             1=CFiles and Folders
 ##                             2=Only Folders
-## Parameter 10: Sub Script for copying i.e. "FilesFoldersActionsCp.sh"
-## Parameter 11: Sub Script for renaming i.e. "FilesFoldersActionsRename.sh"
-## Parameter 12: Sub Script for removing i.e. "FilesFoldersActionsRm.sh"
+## Parameter 10: Sub Script for copying i.e. "FilesFoldersActions.cp.sh"
+## Parameter 11: Sub Script for renaming i.e. "FilesFoldersActions.rename.sh"
+## Parameter 12: Sub Script for removing i.e. "FilesFoldersActions.rm.sh"
 ## Parameter 13: Recreate Folder Switch 0=Off
 ##                                      1=On
 ## Parameter 14: Script Path...Where the scripts are stored i.e. "$HOME/bin/"
@@ -25,20 +25,20 @@
 ## Parameter 18: Verbose Switch     0=Off
 ##                                  1=On; Default
 
-PID_PATH_FULL="/tmp/bash/FilesFoldersActionsCp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions.cp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/sub/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 NAME_PART_OLD="current*" 
 NAME_PART_DELETE="$(date +%y%m%d%*)"
 FOLDER_DEEP=1
 MODE_SWITCH=1
-SCRIPT_SUB_FILE_FOLDERS_CP="FilesFoldersActionsCp.sh"
-SCRIPT_SUB_FILE_FOLDERS_RENAME="FilesFoldersActionsRename.sh"
-SCRIPT_SUB_FILE_FOLDERS_RM="FilesFoldersActionsRm.sh"
+SCRIPT_SUB_FILE_FOLDERS_CP="FilesFoldersActions.cp.sh"
+SCRIPT_SUB_FILE_FOLDERS_RENAME="FilesFoldersActions.rename.sh"
+SCRIPT_SUB_FILE_FOLDERS_RM="FilesFoldersActions.rm.sh"
 RECREATE_FOLDER_SWITCH=1
 SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
-SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsAIO_sys.log"
-JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActionsAIO_job.log"
+SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_sys.log"
+JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_job.log"
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
