--- a/FilesFoldersActions.cp.conf.in
+++ b/FilesFoldersActions.cp.conf.in
@@ -26,8 +26,8 @@ NAME_PART="current*"
 MODE_SWITCH=1
 FOLDER_DEEP=1
 SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
-SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersCpPIDCreate.sh"
-SCRIPT_SUB_FILE_PID_RM="FilesFoldersCpPIDRm.sh"
+SCRIPT_SUB_FILE_PID_CREATE="FilesFolders.cp.pid.create.sh"
+SCRIPT_SUB_FILE_PID_RM="FilesFolders.cp.pid.rm.sh"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
 OUTPUT_SWITCH=0
