modified:   FilesFoldersActions.cp txt 	modified:   FilesFoldersActions.cp.conf.in 	modified:   FilesFoldersActions.cp.pid.create.conf.in 	modified:   FilesFoldersActions.cp.pid.create.sh 	modified:   FilesFoldersActions.cp.pid.create.txt 	modified:   FilesFoldersActions.cp.pid.rm.conf.in 	modified:   FilesFoldersActions.cp.pid.rm.sh 	modified:   FilesFoldersActions.cp.pid.rm.txt 	modified:   FilesFoldersActions.cp.sh 	modified:   FilesFoldersActions.main.conf.in 	modified:   FilesFoldersActions.main.sh 	modified:   FilesFoldersActions.main.txt 	modified:   FilesFoldersActions.rename.conf.in 	modified:   FilesFoldersActions.rename.sh 	modified:   FilesFoldersActions.rename.txt 	modified:   FilesFoldersActions.rm.conf.in 	modified:   FilesFoldersActions.rm.sh 	modified:   FilesFoldersActions.rm.txt

--- a/FilesFoldersActions.cp.pid.create.conf.in
+++ b/FilesFoldersActions.cp.pid.create.conf.in
@@ -8,9 +8,11 @@
 ## Parameter  4: Folder Target i.e.     "/tmp/bash/test/"
 ## Parameter  5: Sys log i.e.           "/var/log/bash/$file_name.log"
 ## Parameter  6: Job log i.e.           "/tmp/bash/$file_name.log"
-## Parameter  7: Output Switch          0=Console
+## Parameter  7: Config Switch          0=Parameters; Default
+##                                      1=Config file
+## Parameter  8: Output Switch          0=Console
 ##                                      1=Logfile; Default
-## Parameter  8: Verbose Switch         0=Off
+## Parameter  9: Verbose Switch         0=Off
 ##                                      1=On; Default
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
@@ -19,5 +21,6 @@ FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
