--- a/FilesFoldersActions.cp.conf.in
+++ b/FilesFoldersActions.cp.conf.in
@@ -14,22 +14,25 @@
 ## Parameter  8: Sub Script for removing PID i.e. "folders-folders-pid-rm.sh"
 ## Parameter  9: Sys log i.e.		"/var/log/bash/$file_name.log"
 ## Parameter 10: Job log i.e.		"/tmp/bash/$file_name.log"
-## Parameter 11: Output Switch      0=Console
+## Parameter 11: Config Switch      0=Parameters; Default
+##                                  1=Config file
+## Parameter 12: Output Switch      0=Console
 ##                                  1=Logfile; Default
-## Parameter 12: Verbose Switch     0=Off
+## Parameter 13: Verbose Switch     0=Off
 ##                                  1=On; Default
 
-PID_PATH_FULL="/tmp/bash/FilesFoldersCp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP=1
-SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
-SCRIPT_SUB_FILE_PID_CREATE="FilesFolders.cp.pid.create.sh"
-SCRIPT_SUB_FILE_PID_RM="FilesFolders.cp.pid.rm.sh"
+SCRIPT_PATH="$HOME/bin/linux/shell/local/FilesFoldersActions/"
+SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersActions.cp.pid.create.sh"
+SCRIPT_SUB_FILE_PID_RM="FilesFoldersActions.cp.pid.rm.sh"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
