--- a/FilesFoldersActions.cp.pid.rm.conf.in
+++ b/FilesFoldersActions.cp.pid.rm.conf.in
@@ -6,15 +6,18 @@
 ## Parameter  2: PID i.e.               "54895"
 ## Parameter  3: Sys log i.e.           "/var/log/bash/$file_name.log"
 ## Parameter  4: Job log i.e.           "/tmp/bash/$file_name.log"
-## Parameter  5: Output Switch          0=Console
+## Parameter  5: Config Switch          0=Parameters; Default
+##                                      1=Config file
+## Parameter  6: Output Switch          0=Console
 ##                                      1=Logfile; Default
-## Parameter  6: Verbose Switch         0=Off
+## Parameter  7: Verbose Switch         0=Off
 ##                                      1=On; Default
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 PID=98765
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
