--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -25,21 +25,21 @@
 ## Parameter 18: Verbose Switch     0=Off
 ##                                  1=On; Default
 
-PID_PATH_FULL="/tmp/bash/FilesFoldersActions.cp.pid"
+PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/sub/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
-NAME_PART_OLD="current*" 
-NAME_PART_DELETE="$(date +%y%m%d%*)"
+NAME_PART_OLD="current*"
+NAME_PART_NEW="$(date +%y%m%d%H%S)"
+NAME_PART_DELETE="$(date +%y%m%d -d'1 year ago')"
 FOLDER_DEEP=1
 MODE_SWITCH=1
-SCRIPT_SUB_FILE_FOLDERS_CP="FilesFoldersActions.cp.sh"
-SCRIPT_SUB_FILE_FOLDERS_RENAME="FilesFoldersActions.rename.sh"
-SCRIPT_SUB_FILE_FOLDERS_RM="FilesFoldersActions.rm.sh"
+SCRIPT_SUB_FILE_CP="FilesFoldersActions.cp.sh"
+SCRIPT_SUB_FILE_RENAME="FilesFoldersActions.rename.sh"
+SCRIPT_SUB_FILE_RM="FilesFoldersActions.rm.sh"
 RECREATE_FOLDER_SWITCH=1
-SCRIPT_PATH="$HOME/bin/linux/shell/FilesFoldersActions.loc/"
+SCRIPT_PATH="$HOME/bin/linux/shell/local/FilesFoldersActions/"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
-
-
