--- a/FilesFoldersActions.rename.conf.in
+++ b/FilesFoldersActions.rename.conf.in
@@ -13,18 +13,23 @@
 ##                                     	1=On
 ## Parameter  7: Sys log i.e. 			"/var/log/bash/$file_name.log"
 ## Parameter  8: Job log i.e. 			"/tmp/bash/$file_name.log"
-## Parameter  9: Output Switch      	0=Console
+## Parameter  9: Config Switch          0=Parameters; Default
+##                                      1=Config file
+## Parameter 10: Output Switch      	0=Console
 ##                                  	1=Logfile; Default
-## Parameter 10: Verbose Switch     	0=Off
+## Parameter 11: Verbose Switch     	0=Off
 ##                                  	1=On; Default
 
-NAME_PART_OLD="current*" 
+NAME_PART_OLD="current*"
+#NAME_PART_OLD=2602271804*"
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
-FOLDER_TARGET="/home/.backup/mysql/sub/"
+#NAME_PART_NEW="current*"
+FOLDER_TARGET="/home/.backup/mysql/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
 RECREATE_FOLDER_SWITCH=1
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rename_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rename_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
