--- a/FilesFoldersActions.rm.conf.in
+++ b/FilesFoldersActions.rm.conf.in
@@ -10,18 +10,21 @@
 ## Parameter 4: Remove Files Folders Deep "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to remove. MAX VALUE IS 2 for security reason
 ## Parameter 5: Sys log i.e. 		"/var/log/bash/$file_name.log"
 ## Parameter 6: Job log i.e.		"/tmp/bash/$file_name.log"
-## Parameter 7: Output Switch      	0=Console
+## Parameter 7: Config Switch       0=Parameters; Default
+##                                  1=Config file
+## Parameter 8: Output Switch      	0=Console
 ##                                 	1=Logfile; Default
-## Parameter 8: Verbose Switch     	0=Off
+## Parameter 9: Verbose Switch     	0=Off
 ##                                 	1=On; Default
 
-FOLDER_TARGET="/home/.backup/mysql/sub/"
-#NAME_PART="$(date +%y%m%d*)"
-NAME_PART="current*" 
+FOLDER_TARGET="/home/.backup/mysql/"
+NAME_PART="$(date +%y%m%d -d'1 year ago')*"
+#NAME_PART="current*" 
 MODE_SWITCH=1
 FOLDER_DEEP=1
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rm_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rm_job.log"
+CONFIG_SWITCH=0
 OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
