modified:   FilesFoldersActions.cp.pid.create.sh 	modified:   FilesFoldersActions.cp.pid.rm.sh 	modified:   FilesFoldersActions.cp.sh 	modified:   FilesFoldersActions.main.conf.in 	modified:   FilesFoldersActions.main.sh 	modified:   FilesFoldersActions.rename.sh 	modified:   FilesFoldersActions.rm.sh

--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -34,6 +34,8 @@ NAME_PART_DELETE="$(date +%y%m%d -d'1 year ago')"
 FOLDER_DEEP=1
 MODE_SWITCH=1
 SCRIPT_SUB_FILE_CP="FilesFoldersActions.cp.sh"
+SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersActions.cp.pid.create.sh"
+SCRIPT_SUB_FILE_PID_RM="FilesFoldersActions.cp.pid.rm.sh"
 SCRIPT_SUB_FILE_RENAME="FilesFoldersActions.rename.sh"
 SCRIPT_SUB_FILE_RM="FilesFoldersActions.rm.sh"
 RECREATE_FOLDER_SWITCH=1
