--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -15,22 +15,24 @@
 ## Parameter 10: Sub Script for copying i.e. "FilesFoldersActions.cp.sh"
 ## Parameter 11: Sub Script for renaming i.e. "FilesFoldersActions.rename.sh"
 ## Parameter 12: Sub Script for removing i.e. "FilesFoldersActions.rm.sh"
-## Parameter 13: Recreate Folder Switch 0=Off
-##                                      1=On
-## Parameter 14: Script Path...Where the scripts are stored i.e. "$HOME/bin/"
-## Parameter 15: Sys log i.e. "/var/log/bash/$file_name.log"
-## Parameter 16: Job log i.e. "/tmp/bash/$file_name.log"
-## Parameter 17: Output Switch      0=Console
+## Parameter 13: Recreate Folder Rename Switch  0=Off
+##                                              1=On
+## Parameter 14: Recreate Folder Remove Switch  0=Off
+##                                              1=On
+## Parameter 15: Script Path...Where the scripts are stored i.e. "$HOME/bin/"
+## Parameter 16: Sys log i.e. "/var/log/bash/$file_name.log"
+## Parameter 17: Job log i.e. "/tmp/bash/$file_name.log"
+## Parameter 18: Output Switch      0=Console
 ##                                  1=Logfile; Default
-## Parameter 18: Verbose Switch     0=Off
+## Parameter 19: Verbose Switch     0=Off
 ##                                  1=On; Default
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
-FOLDER_SOURCE="/home/.backup/mysql/sub/"
+FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 NAME_PART_OLD="current*"
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
-NAME_PART_DELETE="$(date +%y%m%d -d'1 year ago')"
+NAME_PART_DELETE="$(date +%y%m%d -d'1 year ago')*"
 FOLDER_DEEP=1
 MODE_SWITCH=1
 SCRIPT_SUB_FILE_CP="FilesFoldersActions.cp.sh"
@@ -38,7 +40,8 @@ SCRIPT_SUB_FILE_PID_CREATE="FilesFoldersActions.cp.pid.create.sh"
 SCRIPT_SUB_FILE_PID_RM="FilesFoldersActions.cp.pid.rm.sh"
 SCRIPT_SUB_FILE_RENAME="FilesFoldersActions.rename.sh"
 SCRIPT_SUB_FILE_RM="FilesFoldersActions.rm.sh"
-RECREATE_FOLDER_SWITCH=1
+FOLDER_RECREATE_RENAME_SWITCH=1
+FOLDER_RECREATE_RM_SWITCH=1
 SCRIPT_PATH="$HOME/bin/linux/shell/local/FilesFoldersActions/"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_job.log"
