--- a/FilesFoldersActions.rename.conf.in
+++ b/FilesFoldersActions.rename.conf.in
@@ -21,13 +21,11 @@
 ##                                  	1=On; Default
 
 NAME_PART_OLD="current*"
-#NAME_PART_OLD=2602271804*"
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
-#NAME_PART_NEW="current*"
-FOLDER_TARGET="/home/.backup/mysql/"
+FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 MODE_SWITCH=1
 FOLDER_DEEP=1
-RECREATE_FOLDER_SWITCH=1
+FOLDER_RECREATE_SWITCH=1
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rename_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rename_job.log"
 CONFIG_SWITCH=0
