--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -22,9 +22,7 @@
 ## Parameter 15: Script Path...Where the scripts are stored i.e. "$HOME/bin/"
 ## Parameter 16: Sys log i.e. "/var/log/bash/$file_name.log"
 ## Parameter 17: Job log i.e. "/tmp/bash/$file_name.log"
-## Parameter 18: Output Switch      0=Console
-##                                  1=Logfile; Default
-## Parameter 19: Verbose Switch     0=Off
+## Parameter 18: Verbose Switch     0=Off
 ##                                  1=On; Default
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
@@ -32,7 +30,7 @@ FOLDER_SOURCE="/home/.backup/mysql/"
 FOLDER_TARGET="/tmp/bash/FilesFoldersActions/"
 NAME_PART_OLD="current*"
 NAME_PART_NEW="$(date +%y%m%d%H%S)"
-NAME_PART_DELETE="$(date +%y%m%d -d'1 year ago')*"
+NAME_PART_RM="$(date +%y%m%d -d'1 year ago')*"
 FOLDER_DEEP=1
 MODE_SWITCH=1
 SCRIPT_SUB_FILE_CP="FilesFoldersActions.cp.sh"
@@ -42,9 +40,8 @@ SCRIPT_SUB_FILE_RENAME="FilesFoldersActions.rename.sh"
 SCRIPT_SUB_FILE_RM="FilesFoldersActions.rm.sh"
 FOLDER_RECREATE_RENAME_SWITCH=1
 FOLDER_RECREATE_RM_SWITCH=1
-SCRIPT_PATH="$HOME/bin/linux/shell/local/FilesFoldersActions/"
+SCRIPT_PATH="$HOME/bin/linux/bash/local/FilesFoldersActions/"
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.main_job.log"
 CONFIG_SWITCH=0
-OUTPUT_SWITCH=1
 VERBOSE_SWITCH=1
