--- a/FilesFoldersActions.rm.conf.in
+++ b/FilesFoldersActions.rm.conf.in
@@ -14,20 +14,16 @@
 ## Parameter  7: Job log i.e.		"/tmp/bash/$file_name.log"
 ## Parameter  8: Config Switch       0=Parameters; Default
 ##                                  1=Config file
-## Parameter  9: Output Switch      	0=Console
-##                                 	1=Logfile; Default
-## Parameter 10: Verbose Switch     	0=Off
+## Parameter  9: Verbose Switch     0=Off
 ##                                 	1=On; Default
 
 FOLDER_TARGET="/home/.backup/mysql/"
-NAME_PART="$(date +%y%m%d -d'1 year ago')*"
-#NAME_PART="current*" 
+NAME_PART_RM="$(date +%y%m%d -d'1 year ago')*"
 MODE_SWITCH=1
 FOLDER_DEEP=1
-FOLDER_RECREATE_SWITCH=1
+FOLDER_RECREATE_RM_SWITCH=1
 SYS_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rm_sys.log"
 JOB_LOG="/tmp/bash/FilesFoldersActions/FilesFoldersActions.rm_job.log"
 CONFIG_SWITCH=0
-OUTPUT_SWITCH=0
 VERBOSE_SWITCH=1
 
