modified:   FilesFoldersActions.cp.conf.in 	modified:   FilesFoldersActions.cp.pid.create.conf.in 	modified:   FilesFoldersActions.cp.pid.create.sh 	modified:   FilesFoldersActions.cp.pid.rm.conf.in 	modified:   FilesFoldersActions.cp.pid.rm.sh 	modified:   FilesFoldersActions.cp.sh 	modified:   FilesFoldersActions.main.conf.in 	modified:   FilesFoldersActions.main.sh 	modified:   FilesFoldersActions.rename.conf.in 	modified:   FilesFoldersActions.rename.sh 	modified:   FilesFoldersActions.rm.conf.in 	modified:   FilesFoldersActions.rm.sh

--- a/FilesFoldersActions.cp.pid.create.conf.in
+++ b/FilesFoldersActions.cp.pid.create.conf.in
@@ -10,8 +10,8 @@
 ## Parameter  6: Job log i.e.           "/tmp/bash/$file_name.log"
 ## Parameter  7: Config Switch          0=Parameters; Default
 ##                                      1=Config file
-## Parameter  8: Verbose Switch         0=Off
-##                                      1=On; Default
+## Parameter  8: Verbose Switch         0=Off; Default
+##                                      1=On
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 PID=98765
