--- a/FilesFoldersActions.main.conf.in
+++ b/FilesFoldersActions.main.conf.in
@@ -8,10 +8,10 @@
 ## Parameter  4: Name Part New i.e.    "$(date +%y%m%d%H%M%S)"
 ## Parameter  5: Name Part Delete i.e. "$(date +%y%m%d%*)"
 ## Parameter  6: Script Path...Where the scripts are stored i.e. "/root/bin/"
-## Parameter  8: Folder Deep "1" Set the folder deep where File(s) and Folder(s) get found
-## Parameter  9: Mode Switch   0=Only files
-##                             1=CFiles and Folders
-##                             2=Only Folders
+## Parameter  8: Folder Deep where File(s) and Folder(s) get found; Default 1
+## Parameter  9: Mode Switch            0=Only files
+##                                      1=CFiles and Folders
+##                                      2=Only Folders
 ## Parameter 10: Sub Script for copying i.e. "FilesFoldersActions.cp.sh"
 ## Parameter 11: Sub Script for renaming i.e. "FilesFoldersActions.rename.sh"
 ## Parameter 12: Sub Script for removing i.e. "FilesFoldersActions.rm.sh"
@@ -20,10 +20,10 @@
 ## Parameter 14: Recreate Folder Remove Switch  0=Off
 ##                                              1=On
 ## Parameter 15: Script Path...Where the scripts are stored i.e. "$HOME/bin/"
-## Parameter 16: Sys log i.e. "/var/log/bash/$file_name.log"
-## Parameter 17: Job log i.e. "/tmp/bash/$file_name.log"
-## Parameter 18: Verbose Switch     0=Off
-##                                  1=On; Default
+## Parameter 16: Sys log i.e.           "/var/log/bash/$file_name.log"
+## Parameter 17: Job log i.e.           "/tmp/bash/$file_name.log"
+## Parameter 18: Verbose Switch         0=Off; Default
+##                                      1=On
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 FOLDER_SOURCE="/home/.backup/mysql/"
