--- a/FilesFoldersActions.cp.pid.rm.conf.in
+++ b/FilesFoldersActions.cp.pid.rm.conf.in
@@ -8,8 +8,8 @@
 ## Parameter  4: Job log i.e.           "/tmp/bash/$file_name.log"
 ## Parameter  5: Config Switch          0=Parameters; Default
 ##                                      1=Config file
-## Parameter  6: Verbose Switch         0=Off
-##                                      1=On; Default
+## Parameter  6: Verbose Switch         0=Off; Default
+##                                      1=On
 
 PID_PATH_FULL="/tmp/bash/FilesFoldersActions/FilesFoldersActions.cp.pid"
 PID=98765
