--- a/FilesFoldersActions.rm.conf.in
+++ b/FilesFoldersActions.rm.conf.in
@@ -2,20 +2,20 @@
 ## MODIFY IT BEHIND THE = ....NOTHING ELSE
 ## DON'T RENAME IT
 
-## Parameter  1: Folder Target i.e. "/home/backup/mysql/"
-## Parameter  2: Name Part i.e. 		"current*"
-## Parameter  3: Remove Mode Switch	0=Only files
+## Parameter 1: Folder Target i.e. "/home/backup/mysql/"
+## Parameter 2: Name Part i.e. 		"current*"
+## Parameter 3: Remove Mode Switch	0=Only files
 ##                             		1=Files and Folders
 ##                             		2=Only Folders
-## Parameter  4: Remove Files Folders Deep "1"=Deep of the the folder(s) where file(s) and folder(s) can be find to remove. MAX VALUE IS 2 for security reason
-## Parameter  5: Recreate Folder Switch	0=Off
+## Parameter 4: Folder Deep where File(s) and Folder(s) get found; Default 1
+## Parameter 5: Recreate Folder Switch	0=Off
 ##                                     	1=On
-## Parameter  6: Sys log i.e. 		"/var/log/bash/$file_name.log"
-## Parameter  7: Job log i.e.		"/tmp/bash/$file_name.log"
-## Parameter  8: Config Switch       0=Parameters; Default
+## Parameter 6: Sys log i.e. 		"/var/log/bash/$file_name.log"
+## Parameter 7: Job log i.e.		"/tmp/bash/$file_name.log"
+## Parameter 8: Config Switch       0=Parameters; Default
 ##                                  1=Config file
-## Parameter  9: Verbose Switch     0=Off
-##                                 	1=On; Default
+## Parameter 9: Verbose Switch     	0=Off; Default
+##                                 	1=On
 
 FOLDER_TARGET="/home/.backup/mysql/"
 NAME_PART_RM="$(date +%y%m%d -d'1 year ago')*"
